--- a/index.html
+++ b/index.html
@@ -63,10 +63,21 @@
     #model-controls label{display:block; font-size:13px; color:var(--ui-text)}
     #model-controls input[type=number]{width:86px; padding:6px; margin-left:8px; border-radius:6px; border:1px solid rgba(2,6,23,0.06)}
 
+    /* Mobile menu */
+    #mobile-toggle-btn{display:none}
+    #mobile-menu{position:absolute; left:8px; right:8px; top:56px; z-index:7; display:none; background:rgba(255,255,255,0.98); padding:10px; border-radius:10px; box-shadow:var(--shadow)}
+    #mobile-menu .menu-item{display:block;padding:10px;border-radius:8px;border:1px solid rgba(2,6,23,0.04);margin-bottom:8px;background:transparent;color:var(--ui-text);text-align:left}
+
     @media(max-width:640px){
         #sidebar{width:100%; height:260px; bottom:auto;}
         .topbar{left:8px; right:8px}
         #model-controls{right:8px; left:8px; top:auto; bottom:12px}
+    /* hide many desktop buttons and show mobile toggle */
+    .controls-left .btn { display: none; }
+    .controls-left .brand { margin-right: 8px; }
+    #mobile-toggle-btn { display: inline-flex; }
+    #library{left:8px; right:8px; transform:none; min-width:unset}
+    #library-list .lib-item{flex-direction:row}
     }
 
 </style>
@@ -78,6 +89,7 @@
 <div class="topbar">
     <div class="controls-left">
         <div class="brand">Location</div>
+        <button id="mobile-toggle-btn" class="btn secondary" aria-expanded="false">☰</button>
         <button id="add-model-btn" class="btn">Add model</button>
         <button id="open-models-btn" class="btn secondary">Models</button>
             <button id="open-library-btn" class="btn secondary">Library</button>
@@ -93,6 +105,8 @@
 
 <div id="map-note">Click on the map to place the model, or click the button again to cancel.</div>
 <div id="map"></div>
+<!-- Mobile menu (populated by JS) -->
+<div id="mobile-menu" aria-hidden="true"></div>
 <!-- Model library panel -->
 <div id="library" aria-hidden="true">
     <h4>Model library</h4>
@@ -314,6 +328,45 @@
         saveLibrary(modelLibrary);
         addModelUrlInput.value = '';
         renderLibrary();
+    });
+
+    // --- Mobile menu wiring ---
+    const mobileToggle = document.getElementById('mobile-toggle-btn');
+    const mobileMenu = document.getElementById('mobile-menu');
+    function buildMobileMenu() {
+        mobileMenu.innerHTML = '';
+        const items = [
+            { id: 'm-lib', label: 'Library', action: () => openLibraryBtn.click() },
+            { id: 'm-models', label: 'Models', action: () => modelsBtn.click() },
+            { id: 'm-add', label: 'Add model', action: () => addBtn.click() },
+            { id: 'm-save', label: 'Save', action: () => saveBtn.click() },
+            { id: 'm-load', label: 'Load', action: () => loadBtn.click() },
+            { id: 'm-share', label: 'Share', action: () => shareBtn.click() }
+        ];
+        items.forEach(it => {
+            const b = document.createElement('button');
+            b.className = 'menu-item';
+            b.textContent = it.label;
+            b.addEventListener('click', () => {
+                it.action();
+                // close mobile menu after action
+                mobileMenu.style.display = 'none';
+                mobileToggle.setAttribute('aria-expanded', 'false');
+            });
+            mobileMenu.appendChild(b);
+        });
+    }
+
+    mobileToggle.addEventListener('click', () => {
+        const open = mobileMenu.style.display === 'block';
+        if (!open) {
+            buildMobileMenu();
+            mobileMenu.style.display = 'block';
+            mobileToggle.setAttribute('aria-expanded', 'true');
+        } else {
+            mobileMenu.style.display = 'none';
+            mobileToggle.setAttribute('aria-expanded', 'false');
+        }
     });
 
 
