--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         #controls-toggle-btn{display:block}
     }
 
-    /* Controls toggle (default hidden on desktop) */
-    #controls-toggle-btn{position:absolute; right:18px; top:12px; z-index:7; display:none;}
+    /* Controls toggle (default hidden on desktop) - positioned below the topbar */
+    #controls-toggle-btn{position:absolute; right:18px; top:56px; z-index:7; display:none;}
 
 </style>
 </head>
